[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/tilemapTest.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/NewPlayer/NewPlayer1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Entities/NewPlayer/NewPlayer2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Props/wood_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Props/door.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Props/level_script.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Props/final_door.tscn" type="PackedScene" id=7]

[node name="escape_lvl3" type="Node2D"]
script = ExtResource( 6 )
next_level = "res://Scenes/Levels/escape_lvl4.tscn"

[node name="TileMap" parent="." instance=ExtResource( 1 )]
show_collision = true
tile_data = PoolIntArray( 0, 40, 327707, 1, 40, 983062, 2, 40, 983062, 3, 40, 983062, 4, 40, 983062, 5, 40, 983062, 6, 40, 983062, 7, 40, 983062, 8, 40, 589836, 9, 40, 983062, 10, 40, 983062, 11, 40, 983062, 12, 40, 983062, 13, 40, 983062, 14, 40, 983062, 15, 40, 983062, 16, 40, 196611, 65536, 40, 983069, 65537, 28, 0, 65538, 28, 0, 65539, 28, 0, 65540, 28, 0, 65541, 28, 0, 65542, 28, 0, 65543, 28, 0, 65544, 40, 196619, 65545, 28, 0, 65546, 28, 0, 65547, 28, 0, 65548, 28, 0, 65549, 28, 0, 65550, 28, 0, 65551, 28, 0, 65552, 40, 917533, 131072, 40, 1048605, 131073, 28, 0, 131074, 28, 0, 131075, 28, 0, 131076, 28, 0, 131077, 28, 0, 131078, 28, 0, 131079, 28, 0, 131080, 13, 0, 131081, 28, 0, 131082, 28, 0, 131083, 28, 0, 131084, 28, 0, 131085, 28, 0, 131086, 28, 0, 131087, 28, 0, 131088, 40, 1048605, 196608, 40, 1048605, 196609, 28, 0, 196610, 28, 0, 196611, 28, 0, 196612, 28, 0, 196613, 28, 0, 196614, 28, 0, 196615, 28, 0, 196616, 13, 0, 196617, 28, 0, 196618, 28, 0, 196619, 28, 0, 196620, 28, 0, 196621, 28, 0, 196622, 17, 0, 196623, 28, 0, 196624, 40, 1048605, 262144, 40, 983069, 262145, 28, 0, 262146, 28, 0, 262147, 28, 0, 262148, 28, 0, 262149, 28, 0, 262150, 28, 0, 262151, 28, 0, 262152, 13, 0, 262153, 28, 0, 262154, 28, 0, 262155, 28, 0, 262156, 28, 0, 262157, 28, 0, 262158, 28, 0, 262159, 28, 0, 262160, 40, 1048605, 327680, 40, 1048605, 327681, 28, 0, 327682, 17, 0, 327683, 28, 0, 327684, 28, 0, 327685, 28, 0, 327686, 28, 0, 327687, 28, 0, 327688, 40, 3, 327689, 28, 0, 327690, 17, 0, 327691, 28, 0, 327692, 28, 0, 327693, 23, 0, 327694, 24, 0, 327695, 24, 0, 327696, 40, 1048605, 393216, 40, 917533, 393217, 28, 0, 393218, 28, 0, 393219, 28, 0, 393220, 28, 0, 393221, 28, 0, 393222, 28, 0, 393223, 28, 0, 393224, 40, 1048605, 393225, 28, 0, 393226, 28, 0, 393227, 28, 0, 393228, 28, 0, 393229, 18, 0, 393230, 17, 0, 393231, 18, 0, 393232, 40, 917533, 458752, 40, 983069, 458753, 28, 0, 458754, 28, 0, 458755, 28, 0, 458756, 28, 0, 458757, 28, 0, 458758, 28, 0, 458759, 28, 0, 458760, 40, 983069, 458761, 28, 0, 458762, 28, 0, 458763, 28, 0, 458764, 28, 0, 458765, 28, 0, 458766, 28, 0, 458767, 28, 0, 458768, 40, 983069, 524288, 40, 327687, 524289, 40, 983062, 524290, 40, 983062, 524291, 40, 983062, 524292, 40, 983062, 524293, 40, 983062, 524294, 40, 983062, 524295, 40, 983062, 524296, 40, 983061, 524297, 40, 983062, 524298, 40, 983062, 524299, 40, 983062, 524300, 40, 983062, 524301, 40, 983062, 524302, 40, 983062, 524303, 40, 983062, 524304, 40, 327693 )
__meta__ = {
"_edit_lock_": true
}

[node name="door" parent="." instance=ExtResource( 5 )]
position = Vector2( 48, 224 )

[node name="final_door" parent="." instance=ExtResource( 7 )]
position = Vector2( 240, 224 )

[node name="final_door2" parent="." instance=ExtResource( 7 )]
position = Vector2( 496, 128 )

[node name="door3" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 224 )

[node name="Box" parent="." instance=ExtResource( 4 )]
position = Vector2( 184, 240 )

[node name="Box2" parent="." instance=ExtResource( 4 )]
position = Vector2( 424, 240 )

[node name="Box3" parent="." instance=ExtResource( 4 )]
position = Vector2( 496, 240 )

[node name="Box4" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 240 )

[node name="NewPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 240 )

[node name="pj2" parent="." instance=ExtResource( 3 )]
position = Vector2( 304, 240 )
